--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "embla-carousel-react": "^8.0.0-rc23",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
